--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 				</div>   <!--end show hide based on logged in and requested form  -->
 			</div>    <!--close user form view -->
 			
-		 	<div class = 'daydisplay'>
+		 	<div>
 			 	<div class="container">
 			 	<div data-ng-controller="tagController as Tag"> <!-- tag controller begin -->
 				<div class="sortFrame">    <!--  tag search begin -->
