--- a/public/facebookdev.html
+++ b/public/facebookdev.html
@@ -6,6 +6,9 @@
 <meta charset="UTF-8">
 </head>
 <body>
+
+<h1>Facebook Dev</h1> 
+
 <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
