--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
 								  <div class="switch form-control">Child-friendly?
 								    <label>
 								      No
-								      <input type="checkbox">
+								      <input type="checkbox" id="child" data-ng-model="Day.child">
 								      <span class="lever"></span>
 								      Yes
 								    </label>
@@ -95,7 +95,7 @@
 								  <div class="switch form-control">Teen-friendly?
 								    <label>
 								      No
-								      <input type="checkbox">
+								      <input type="checkbox" id="teen" data-ng-model="Day.teen">
 								      <span class="lever"></span>
 								      Yes
 								    </label>
