--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
 	<meta property="og:title" content="Daybreak is the pefect way to share your Perfect Day.">
     <meta property="og:description" content="Use Daybreak discover other people's favorite days and favorite places, and share your perfect day.">
 
-
 	<script src="js/modernizr.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Fira+Sans:400,500' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
@@ -17,48 +16,33 @@
 </head>
 
 <body>
+	<div ng-controller="userController as User"> <!--important! this wraps all functions -->
+		<div data-ng-controller="dayController as Day">
+			<div my-user-functions></div> <!--  Nav Bar and User Register/Login/Account Controls-->
+			<div class="usermessage">{{User.userMessage}}</div>
+				<div class="hide-on-small-only">{{User}}</div>	
+			<div data-ng-switch on='User.userDayView'>
+	   			<div data-ng-switch-when="grid">
+	   				<tag-search></tag-search> 
+ 					<div grid-day-view></div>
+ 				</div>
+			</div>
 
- 
-<div ng-controller="userController as User"> <!--important! this wraps all functions -->
-	<div data-ng-controller="dayController as Day">
+			<div data-ng-switch on='User.userDayView'>
+	   			<div data-ng-switch-when="single"> 
+					<!-- <tag-search></tag-search> -->						
+				<single-day-view></single-day-view>
+ 	  			</div>
+ 			</div>
+		</div>    <!--  close day controller -->
+	</div>   <!-- close user controller -->
+	<foot-of-page></foot-of-page>
 
-		<div my-user-functions></div> <!--  Nav Bar and User Register/Login/Account Controls-->
-		
-			<div class='usermessage'> {{User.userMessage}} </div>
-			 
-			
-
-
-
-					<div data-ng-switch on='User.userDayView'>
-			   			<div data-ng-switch-when="grid">
-			   				<tag-search></tag-search> 
-		 					<div grid-day-view></div>
-		 				</div>
-					</div>
-
-					<div data-ng-switch on='User.userDayView'>
-			   			<div data-ng-switch-when="single"> 
-			   				<tag-search></tag-search>
-							<single-day-view></single-day-view>
-		 	  			</div>
-		 			</div>
-
-
-		</div>     <!-- close container-->
-	</div>    <!--  close day controller -->
-</div>   <!-- close user controller -->
-
- <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<div foot-of-page></div>
- <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 <script src="js/main.js"></script>
-
 </body>
-
 </html>
