--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
  			</div>
 
 			<div class="usermessage">{{User.userMessage}}</div>
-				<div class="hide-on-small-only">{{User}}</div>	
-			<div data-ng-switch on='User.userViewSwitch'>
+<!-- 			<div class="hide-on-small-only">{{User}}</div>	-->			
+				<div data-ng-switch on='User.userViewSwitch'>
 	   			<div data-ng-switch-when="grid">
 	   				<tag-search></tag-search> 
  					<div grid-day-view></div>
@@ -38,7 +38,6 @@
 
 			<div data-ng-switch on='User.userViewSwitch'>
 	   			<div data-ng-switch-when="single"> 
-					<!-- <tag-search></tag-search> -->						
 				<single-day-view></single-day-view>
  	  			</div>
  			</div>
