--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBmK00Qr6_8hzbLNNU67xCs_kdGJTgHSnI"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/main.js"></script>
 </body>
