--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
 	  fjs.parentNode.insertBefore(js, fjs);
 	}(document, 'script', 'facebook-jssdk'));</script>
 
-	<div id="fb-root"></div>
+
+
+	<!--<div id="fb-root"></div>-->
 
 	<div ng-controller="userController as User">
 		<div data-ng-controller="dayController as Day">
@@ -57,15 +59,16 @@
 		</div>    <!--  close day controller -->
 	</div>   <!-- close user controller -->
 
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBmK00Qr6_8hzbLNNU67xCs_kdGJTgHSnI"></script>
-<script src="js/jquery-ui.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
     <script src='js/angular-ui-router.min.js'></script>
 
     <script src="js/main.js"></script>
+
 </body>
 </html>
