--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 <title>Share and Find the Perfect Day</title>
 </head>
 <body>
-<div id="modal"></div>
+
+<div id="modal"><modalContent></modalContent></div>
     <div ng-controller="userController as User">
 		<div data-ng-controller="dayController as Day">
 			<div my-user-functions></div> <!--  Nav Bar and User Register/Login/Account Controls-->
@@ -70,8 +71,8 @@
 				 autoOpen: true,
 				 modal: true,
 				 title: "About The Perfect Day",
-				 width: 300,
-				 height: 500,
+				 width: 400,
+				 height: 700,
 				 position: {my: "center",
 										at: "center",
 										of: window,
